添加书本信息到 README

--- a/README
+++ b/README
@@ -9,6 +9,8 @@
 
 除了一些空格/空行/缩进方面的调整外，没有对原始代码进行其他改动。
 
+我的新书，介绍 Redis 底层运作机制的《Redis 设计与实现》将在 3 月 8 日发布，这份注释代码就是该书的附属项目，更多消息请见： http://www.douban.com/note/264302057/
+
 have fun!
 
 huangz
