--- a/README
+++ b/README
@@ -9,9 +9,10 @@
 
 除了一些空格/空行/缩进方面的调整外，没有对原始代码进行其他改动。
 
-我的新书，介绍 Redis 底层运作机制的《Redis 设计与实现》将在 3 月 8 日发布，这份注释代码就是该书的附属项目，更多消息请见： http://www.douban.com/note/264302057/
+这份注释源码是《Redis 设计与实现》一书的附属项目，可以到 www.redisbook.com 阅读本书。
 
 have fun!
 
 huangz
-2013.3.5
+2013.3.5 
+(last update at 2013.3.9)
